# terraform-useful-code

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-terraform-module.yml  ci_terraform.yml  ci_terraform_reusable_workflow.yml  ci_tf_module.yml  ci_tf_module_reusable_workflow.yml  deploy.yml  deploy_terraform_reusable_workflow.yml  update_terraform.yml
aws/terraform/aws_iam_policy_infos/: dynamodb_readwrite.json.tftpl  firehose_write.json.tftpl  lambda_exec.json.tftpl  logs_log.json.tftpl  s3_read.json.tftpl  s3_readwrite.json.tftpl
aws/terraform/modules/aws_cloudwatch_log_group/: _naming_module.tf  aws_cloudwatch_log.tf  output.tf  outputs.tf  variable.tf  variables.tf
aws/terraform/modules/aws_lambda_py/: aws_cloudwatch_log.tf  aws_lambda.tf  output.tf  variable.tf
aws/terraform/modules/aws_vpc/: app.tf  aws_security_group.tf  aws_subnet.tf  aws_vpc.tf  front.tf  internal.tf  output.tf  variable.tf
aws/terraform/modules/cw_logs_firehose/: _naming_module.tf  aws_cloudwatch_log.tf  aws_cloudwatch_log_group.tf  aws_cloudwatch_log_subscription_filter.tf  aws_firehose.tf  aws_kinesis.tf  aws_kms.tf  aws_s3.tf  variable.tf
scripts/: install_terraform.sh
scripts/test_helper/: pyproject.toml
scripts/tf_pytest/: pyproject.toml
scripts/tf_pytest/terraform/: .terraform.lock.hcl  sample.tf
scripts/tf_pytest/terraform/modules/some_module/: sample.tf
scripts/tf_pytest/tests/: conftest.py  test.py  test_main.py  test_tfstate.py
scripts/tf_pytest/tf_pytest/: __init__.py  aws.py  main.py  tfstate.py  utility.py
(+125 files in other folders)
