[tool.poetry]
name = "tf-pytest"
version = "0.1.0"
description = ""
authors = ["Hikaru <hkak03key@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
boto3 = "^1.34.67"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "tf_pytest"
testpaths = ["tests",]
